--- a/principal.html
+++ b/principal.html
@@ -9,6 +9,7 @@
     <title>DEVELOPS</title>
 </head>
 <body>
+    <h1>éan</h1>
     <div class="header">
         <img src="img/java.png" alt="logo">
         <h4><a href="principal.html">HOME</a></h4>
