--- a/principal.html
+++ b/principal.html
@@ -6,14 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="img/pythonone.png" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
     <title>DEVELOPS</title>
 </head>
 <body>
     <div class="header">
-        <img src="img/java.png" alt="logo">
+        <a href="https://pt.khanacademy.org/computing/computer-programming/programming/intro-to-programming/v/programming-intro" target="_blank"><img src="img/java.png" alt="logo" id="principal"></a>
         <h4><a href="principal.html">HOME</a></h4>
         <h4><a href="colaboradores.html">COLABORADORES</a></h4>
         <h4><a href="saibamais.html">SAIBA MAIS</a></h4>
+    </div>
+
+    <div class="body">
+        <h1 class="title">Entenda Programação 💻</h1>
+        <img src="img/Arte-capa.png" alt="corpo">
     </div>
     
 </body>
