--- a/saibamais.html
+++ b/saibamais.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <div class="header">
-        <img src="img/java.png" alt="logo">
+        <img src="img/java.png" alt="logo" id="principal">
         <h4><a href="principal.html">HOME</a></h4>
         <h4><a href="colaboradores.html">COLABORADORES</a></h4>
         <h4><a href="saibamais.html">SAIBA MAIS</a></h4>
