Adicionei Js e bordas no h3 do front

--- a/principal.html
+++ b/principal.html
@@ -27,11 +27,11 @@
         </div>
 
         <div class="texts">
-            <h1 class="title">Entenda Programação 💻</h1> <br>
-            <h3 class="prog">Introdução</h3>
-            <p></p>
+            <div class="container">
+                <p>Coding is <span class="typed-text"></span><span class="cursor">&nbsp;</span></p>
+              </div> <br>
             <div class="boder">
-                <h3 class="front">Front-End</h3>
+                <a href="https://roadmap.sh/frontend" ><h3 class="front">Front-End</h3></a>
             </div>
             <p>Podemos classificar como a parte visual de um site, aquilo que conseguimos interagir. Quem trabalha com
                 Front End é responsável por desenvolver por meio do código uma interface gráfica e, normalmente, com as
@@ -69,6 +69,7 @@
                 se sentindo confortável e quiser explorar novos temas, o conhecimento virá de forma mais natural. </p>
         </div>
     </form>
+    <script src="js/index.js"></script>
 </body>
 <!--"Shift + Alt + F"-->
 
