Imagem/Posicionamento dos textos

--- a/principal.html
+++ b/principal.html
@@ -26,48 +26,51 @@
             <img src="img/Arte-capa.png" alt="corpo">
         </div>
 
-        <div class="texts">
+        <div class="fundir" id="principal">
             <div class="container">
                 <p>Coding is <span class="typed-text"></span><span class="cursor">&nbsp;</span></p>
-              </div> <br>
-            <div class="boder">
-                <a href="https://roadmap.sh/frontend" ><h3 class="front">Front-End</h3></a>
-            </div>
-            <p>Podemos classificar como a parte visual de um site, aquilo que conseguimos interagir. Quem trabalha com
-                Front End é responsável por desenvolver por meio do código uma interface gráfica e, normalmente, com as
-                tecnologias base da Web: HTML, CSS e JavaScript.
+            </div> <br>
+            <!--TEXTOS DA PAGINA !-->
 
-                Algumas pessoas podem confundir um pouco esse trabalho com o que um designer faz, pois no passado
-                existia uma entidade chamada Webmaster que fazia tudo isso e mais um pouco, mas a diferença aqui é que o
-                designer vai utilizar alguma ferramenta visual para desenhar a interface, do Photoshop ao Sketch e, quem
-                faz Front-End, estará mais próxima do código em si, que irá rodar num navegador Web como o Chrome,
-                Firefox ou Safari.</p>
-                <div class="boder"><h3 class="back">Back-End</h3></div>
-            <p>Como o próprio nome sugere, vem da ideia daquilo que tem por trás de uma aplicação. Pode ficar meio
-                abstrato num primeiro momento, mas pense que para conseguir usar o Facebook no dia a dia, os dados (as
-                informações) do seu perfil, amigos e publicações precisam estar salvos em algum lugar e serem
-                processados a partir dele, sendo este lugar um banco de dados.
-
-                O Back-End trabalha em boa parte dos casos fazendo a ponte entre os dados que vem do navegador rumo ao
-                banco de dados e vice-versa, sempre aplicando as devidas regras de negócio, validações e garantias num
-                ambiente restrito ao usuário final (ou seja, onde ele não consegue acessar ou manipular algo).</p>
-            <div class="boder"><h3 class="full">Full-Stack</h3></div>
-            <p>Bom, ambas as vertentes do Front e do Back End possuem uma trilha bem longa dependendo do quão profundo
-                conhecedor delas você quer ser.
-
-                Em resumo, Full Stack developer é quem trabalha com Front End e Back End.
-
-                Com o passar dos anos é meio natural após começar por um dos lados você ir aprendendo como o outro
-                funciona. Eu, por exemplo, comecei como desenvolvedor PHP e hoje sou focado 100% em Front End, por mais
-                que eu não seja um especialista em Back End, os conceitos que eu sei me ajudam a conseguir resolver
-                problemas neste lado, não tão bem quanto como no Front End, mas consigo.
-
-                O que vale se atentar aqui é que, no mercado de trabalho, algumas empresas esperam que você tenha um
-                conhecimento também de Devops e de SQL e Banco de dados.
-
-                Minha dica é, se você está começando na carreira, foque em uma área, estude ela bastante e, conforme for
-                se sentindo confortável e quiser explorar novos temas, o conhecimento virá de forma mais natural. </p>
+            <div class="texts">
+                <div class="boder">
+                    <h3 class="front">Front-End</h3>
+                </div>
+                <p class="front-text">O front-end é a parte de uma aplicação que os usuários interagem diretamente,
+                    incluindo a interface do usuário, a experiência do usuário e a apresentação visual. Ele envolve o
+                    desenvolvimento e a implementação de elementos visuais, como layouts, botões, menus e formulários,
+                    utilizando tecnologias como HTML, CSS e JavaScript. Os desenvolvedores front-end se concentram em
+                    criar uma experiência agradável e intuitiva para os usuários, garantindo a funcionalidade correta e
+                    a adaptação para diferentes dispositivos e navegadores. Eles também colaboram com os designers para
+                    traduzir as ideias visuais em código e trabalham em conjunto com o back-end para integrar a
+                    interface do usuário com a lógica e os dados do sistema.</p>
+                <div class="boder">
+                    <h3 class="back">Back-End</h3>
+                </div>
+                <p class="back-text">O back-end é a parte de uma aplicação responsável por lidar com a lógica de
+                    negócios e o processamento de dados. Ele abrange o servidor, o banco de dados e os componentes que
+                    não são visíveis para o usuário final. O back-end é responsável por receber solicitações do cliente,
+                    processá-las, acessar o banco de dados para recuperar ou armazenar informações e retornar os dados
+                    processados para o cliente. Os desenvolvedores de back-end trabalham com linguagens de programação,
+                    como Python, Java, PHP ou Ruby, frameworks e bibliotecas específicas para a construção e gestão da
+                    lógica do lado do servidor. Eles também lidam com a segurança, a escalabilidade e o desempenho do
+                    sistema, garantindo que a aplicação funcione de maneira eficiente e segura.</p>
+                <div class="boder">
+                    <h3 class="full">Full-Stack</h3>
+                </div>
+                <p class="full-text">Full stack refere-se à capacidade de um desenvolvedor de trabalhar tanto no lado do
+                    cliente (frontend) quanto no lado do servidor (backend) de uma aplicação. Um desenvolvedor full
+                    stack é capaz de lidar com todas as camadas da pilha de tecnologia, incluindo a interface do
+                    usuário, a lógica de negócios e o banco de dados. Isso envolve habilidades em linguagens de
+                    programação front-end (como HTML, CSS e JavaScript) e back-end (como Python, Ruby, PHP ou Node.js),
+                    bem como conhecimento de bancos de dados, servidores e sistemas de controle de versão. Em resumo, um
+                    desenvolvedor full stack tem habilidades versáteis para projetar, desenvolver e implantar
+                    aplicativos web completos. </p>
+            </div> 
         </div>
+            
+        
+
     </form>
     <script src="js/index.js"></script>
 </body>
