Acrescentando img e texto do mobile

--- a/principal.html
+++ b/principal.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="img/pythonone.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/Python-logo-notext.svg.png" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,54 +22,109 @@
             <h4><a href="colaboradores.html">COLABORADORES</a></h4>
             <h4><a href="saibamais.html">SAIBA MAIS</a></h4>
         </div>
-        <div class="body">
-            <img src="img/Arte-capa.png" alt="corpo">
-        </div>
+        <main>
+            <div class="body">
+                <img src="img/Arte-capa.png" alt="corpo">
+            </div>
 
-        <div class="fundir" id="principal">
-            <div class="container">
-                <p>Coding is <span class="typed-text"></span><span class="cursor">&nbsp;</span></p>
-            </div> <br>
-            <!--TEXTOS DA PAGINA !-->
+            <div class="fundir" id="principal">
+                <div class="container">
+                    <p>Coding is <span class="typed-text"></span><span class="cursor">&nbsp;</span></p>
+                </div> <br>
+                <!--TEXTOS DA PAGINA !-->
 
-            <div class="texts">
-                <div class="boder">
-                    <h3 class="front">Front-End</h3>
+                <div class="texts">
+                    <div class="boder">
+                        <h3 class="front">Front-End</h3>
+                    </div>
+                    <p class="front-text">O front-end é a parte de uma aplicação que os usuários interagem diretamente,
+                        incluindo a interface do usuário, a experiência do usuário e a apresentação visual. Ele envolve
+                        o
+                        desenvolvimento e a implementação de elementos visuais, como layouts, botões, menus e
+                        formulários,
+                        utilizando tecnologias como HTML, CSS e JavaScript. Os desenvolvedores front-end se concentram
+                        em
+                        criar uma experiência agradável e intuitiva para os usuários, garantindo a funcionalidade
+                        correta e
+                        a adaptação para diferentes dispositivos e navegadores. Eles também colaboram com os designers
+                        para
+                        traduzir as ideias visuais em código e trabalham em conjunto com o back-end para integrar a
+                        interface do usuário com a lógica e os dados do sistema.</p>
+                    <div class="boder">
+                        <h3 class="back">Back-End</h3>
+                    </div>
+                    <p class="back-text">O back-end é a parte de uma aplicação responsável por lidar com a lógica de
+                        negócios e o processamento de dados. Ele abrange o servidor, o banco de dados e os componentes
+                        que
+                        não são visíveis para o usuário final. O back-end é responsável por receber solicitações do
+                        cliente,
+                        processá-las, acessar o banco de dados para recuperar ou armazenar informações e retornar os
+                        dados
+                        processados para o cliente. Os desenvolvedores de back-end trabalham com linguagens de
+                        programação,
+                        como Python, Java, PHP ou Ruby, frameworks e bibliotecas específicas para a construção e gestão
+                        da
+                        lógica do lado do servidor. Eles também lidam com a segurança, a escalabilidade e o desempenho
+                        do
+                        sistema, garantindo que a aplicação funcione de maneira eficiente e segura.</p>
+                    <div class="boder">
+                        <h3 class="full">Full-Stack</h3>
+                    </div>
+                    <p class="full-text">Full stack refere-se à capacidade de um desenvolvedor de trabalhar tanto no
+                        lado do
+                        cliente (frontend) quanto no lado do servidor (backend) de uma aplicação. Um desenvolvedor full
+                        stack é capaz de lidar com todas as camadas da pilha de tecnologia, incluindo a interface do
+                        usuário, a lógica de negócios e o banco de dados. Isso envolve habilidades em linguagens de
+                        programação front-end (como HTML, CSS e JavaScript) e back-end (como Python, Ruby, PHP ou
+                        Node.js),
+                        bem como conhecimento de bancos de dados, servidores e sistemas de controle de versão. Em
+                        resumo, um
+                        desenvolvedor full stack tem habilidades versáteis para projetar, desenvolver e implantar
+                        aplicativos web completos. </p>
                 </div>
-                <p class="front-text">O front-end é a parte de uma aplicação que os usuários interagem diretamente,
-                    incluindo a interface do usuário, a experiência do usuário e a apresentação visual. Ele envolve o
-                    desenvolvimento e a implementação de elementos visuais, como layouts, botões, menus e formulários,
-                    utilizando tecnologias como HTML, CSS e JavaScript. Os desenvolvedores front-end se concentram em
-                    criar uma experiência agradável e intuitiva para os usuários, garantindo a funcionalidade correta e
-                    a adaptação para diferentes dispositivos e navegadores. Eles também colaboram com os designers para
-                    traduzir as ideias visuais em código e trabalham em conjunto com o back-end para integrar a
-                    interface do usuário com a lógica e os dados do sistema.</p>
-                <div class="boder">
-                    <h3 class="back">Back-End</h3>
-                </div>
-                <p class="back-text">O back-end é a parte de uma aplicação responsável por lidar com a lógica de
-                    negócios e o processamento de dados. Ele abrange o servidor, o banco de dados e os componentes que
-                    não são visíveis para o usuário final. O back-end é responsável por receber solicitações do cliente,
-                    processá-las, acessar o banco de dados para recuperar ou armazenar informações e retornar os dados
-                    processados para o cliente. Os desenvolvedores de back-end trabalham com linguagens de programação,
-                    como Python, Java, PHP ou Ruby, frameworks e bibliotecas específicas para a construção e gestão da
-                    lógica do lado do servidor. Eles também lidam com a segurança, a escalabilidade e o desempenho do
-                    sistema, garantindo que a aplicação funcione de maneira eficiente e segura.</p>
-                <div class="boder">
-                    <h3 class="full">Full-Stack</h3>
-                </div>
-                <p class="full-text">Full stack refere-se à capacidade de um desenvolvedor de trabalhar tanto no lado do
-                    cliente (frontend) quanto no lado do servidor (backend) de uma aplicação. Um desenvolvedor full
-                    stack é capaz de lidar com todas as camadas da pilha de tecnologia, incluindo a interface do
-                    usuário, a lógica de negócios e o banco de dados. Isso envolve habilidades em linguagens de
-                    programação front-end (como HTML, CSS e JavaScript) e back-end (como Python, Ruby, PHP ou Node.js),
-                    bem como conhecimento de bancos de dados, servidores e sistemas de controle de versão. Em resumo, um
-                    desenvolvedor full stack tem habilidades versáteis para projetar, desenvolver e implantar
-                    aplicativos web completos. </p>
-            </div> 
-        </div>
-            
-        
+            </div>
+            <div class="mobile">
+                <h1>O que é o Sistema Mobile ?</h1>
+                <img src="/img/mobile.jpg" alt="mobile">
+                <text class="mobile-text">
+                    A programação na área mobile tem se tornado cada vez mais relevante e popular nos últimos anos. Com
+                    o aumento do uso de dispositivos móveis, como smartphones e tablets, desenvolver aplicativos e criar
+                    experiências interativas para dispositivos móveis tornou-se uma demanda constante.
+
+                    A programação mobile envolve o desenvolvimento de aplicativos específicos para plataformas móveis,
+                    como iOS (utilizando a linguagem Swift ou Objective-C) e Android (utilizando a linguagem Java ou
+                    Kotlin). Além disso, existem frameworks e ferramentas que permitem o desenvolvimento de aplicativos
+                    móveis multiplataforma, como o React Native (baseado em JavaScript) e o Flutter (baseado em Dart).
+
+                    Uma das principais considerações ao programar para dispositivos móveis é o design responsivo. Os
+                    aplicativos móveis devem ser capazes de se adaptar a diferentes tamanhos de tela e proporções,
+                    garantindo uma experiência consistente e amigável para o usuário, independentemente do dispositivo
+                    que esteja usando. Isso envolve o uso de layouts flexíveis, dimensionamento adequado de elementos e
+                    adaptação de recursos conforme necessário.
+
+                    Outro aspecto importante na programação mobile é a interação com recursos nativos dos dispositivos,
+                    como câmera, GPS, acelerômetro e notificações. As plataformas móveis fornecem APIs e bibliotecas que
+                    permitem o acesso a esses recursos, permitindo a criação de funcionalidades avançadas nos
+                    aplicativos.
+
+                    Além disso, a programação mobile também inclui a integração com serviços web e bancos de dados
+                    remotos. Os aplicativos móveis geralmente precisam se comunicar com servidores para buscar e enviar
+                    dados, realizar autenticação de usuários e sincronizar informações em tempo real.
+
+                    A área de programação mobile está em constante evolução, com novas tecnologias e recursos sendo
+                    lançados regularmente. É importante estar atualizado com as últimas tendências e práticas
+                    recomendadas para oferecer aos usuários a melhor experiência possível.
+
+                    Em resumo, a programação na área mobile oferece a oportunidade de criar aplicativos inovadores,
+                    atender a uma demanda crescente por soluções móveis e fornecer experiências interativas e
+                    personalizadas para os usuários. Com a expansão contínua do mercado mobile, a programação nesta área
+                    apresenta um futuro promissor e emocionante para os desenvolvedores.
+
+                </text>
+            </div>
+
+
+        </main>
 
     </form>
     <script src="js/index.js"></script>
